@@ -290,7 +290,7 @@ static char* userhash = NULL;
 static int alock_auth_md5_init(const char* args) {
 
     if (!args) {
-        fprintf(stderr, "alock: error, missing arguments for [md5].\n");
+        fprintf(stderr, "%s", "alock: error, missing arguments for [md5].\n");
         return 0;
     }
 
@@ -306,7 +306,7 @@ static int alock_auth_md5_init(const char* args) {
                         if (!userhash)
                             userhash = strdup(&arg[5]);
                     } else {
-                        fprintf(stderr, "alock: error, missing or incorrect hash for [md5].\n");
+                        fprintf(stderr, "%s", "alock: error, missing or incorrect hash for [md5].\n");
                         free(arguments);
                         return 0;
                     }
@@ -345,12 +345,12 @@ static int alock_auth_md5_init(const char* args) {
         }
         free(arguments);
     } else {
-        fprintf(stderr, "alock: error, missing arguments for [md5].\n");
+        fprintf(stderr, "%s", "alock: error, missing arguments for [md5].\n");
         return 0;
     }
 
     if (!userhash) {
-        fprintf(stderr, "alock: error, missing hash for [md5].\n");
+        fprintf(stderr, "%s", "alock: error, missing hash for [md5].\n");
         return 0;
     }
 
@@ -406,7 +406,7 @@ int main(int argc, char* argv[]) {
     md5Context md5;
 
     if (argc > 1) {
-        printf("amd5 - reads from stdin to calculate a md5-hash.\n");
+        printf("%s", "amd5 - reads from stdin to calculate a md5-hash.\n");
         exit(EXIT_SUCCESS);
     }
 
@@ -418,7 +418,7 @@ int main(int argc, char* argv[]) {
 
     for(i = 0; i < MD5_DIGEST_LENGTH; ++i)
         printf("%02x", digest[i]);
-    printf("\n");
+    printf("%s", "\n");
     fflush(stdout);
 
     return EXIT_SUCCESS;
