@@ -37,17 +37,17 @@ static int alock_cursor_xcursor_init(const char* args, struct aXInfo* xinfo) {
         return 0;
 
     if (!args || strlen(args) < 13) {
-        printf("alock: error, missing arguments for [xcursor].\n");
+        printf("%s", "alock: error, missing arguments for [xcursor].\n");
         return 0;
     }
 
     if (strstr(args, "xcursor:") != args || strstr(&args[8], "file=") != &args[8]) {
-        printf("alock: error, wrong arguments for [xcursor].\n");
+        printf("%s", "alock: error, wrong arguments for [xcursor].\n");
         return 0;
     }
 
     if (!(cursor = XcursorFilenameLoadCursor(xinfo->display, &args[13]))) {
-        printf("alock: error, couldnt load [%s]\n", &args[13]);
+        printf("%s", "alock: error, couldnt load [%s]\n", &args[13]);
         return 0;
     }
 
